fixed content aligning

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .calculator-grid {
   display: grid;
   justify-content: center;
-  align-items: center;
+  align-content: center;
   min-height: 100vh;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: repeat(5, 100px);
